[package]
name = "reshift"
version = "0.1.0"
authors = ["clare <clara@DESKTOP-SVLILSG>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["winuser", "windef", "consoleapi"]}
#winmm-sys = "*"
#user32-sys = "*"
#kernel32-sys = "*"